[package]
name = "live-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
futures = "0.3"
log = "0.4"
mimalloc = { version = "*", default-features = false }
parking_lot = "0.12"
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"

[profile.release]
lto = true
strip = true